Update on Overleaf.

--- a/blockchain.tex
+++ b/blockchain.tex
@@ -7,7 +7,7 @@ This chapter introduces the most important concepts of blockchain which are esse
 
     \section{Introduction}
    “The Byzantine Generals' Problem” is a classical problem faced by distributed systems, which, in simple terms, states that consistency in a distributed system can never be fully guaranteed \cite{byzantine-generals-problem}. This is derived from a lack of general consensus as to what the state of the system is at any given time.
-   Nakamoto's implementation of a blockchain seems to be, at present, the most practical way to face and solve \todo{fcorreia: WDYT of "approach" instead of "face and solve"? (in this case it wouldn't be as needed to mention the limitations just yet)} this problem (though with its limitations), even earning the term "Practical Byzantine Fault Tolerance Algorithm", because of how it handles the consensus issue. The fact that many kinds of applications rely on distributed architectures, which might face these problems, turns blockchain all the more interesting and appealing \todo{fcorreia: I'd go with only one of the adjectives instead of both :-)}. 
+   Nakamoto's implementation of a blockchain seems to be, at present, the most practical way to face and solve \todo{fcorreia: WDYT of "approach" instead of "face and solve"? (in this case it wouldn't be as needed to mention the limitations just yet)} this problem (though with its limitations), even earning the term "Practical Byzantine Fault Tolerance (PBFT) Algorithm", because of how it handles the consensus issue. The fact that many kinds of applications rely on distributed architectures, which might face these problems, turns blockchain all the more appealing. 
    
    Some improvements have been built upon the traditional blockchain, such as smart contracts, which further enhance its use and allow for a wider variety of applications. Some areas where blockchain is starting to see some use include insurance, finance, Internet-of-Things, health care, identity management, to name a few. 
    In each of these areas, there are many ways in which blockchain can be used, be it to store information, process information, process payments or provide services. The versatility and popularity of this technology allows for the possibility of many other applications to be proposed \todo{fcorreia: I would say the popularity may be a consequence of the merits of blockchains, and not so much a good reason for its applicability.}.
