--- a/blockchainapplicability.tex
+++ b/blockchainapplicability.tex
@@ -40,6 +40,7 @@ Describe in which particular way a Ledger would help, citing sources and particu
 ->Check image from the other article
 ->Other article talking about the throughput and latency trade-off.
 \subsection{Scalability Concerns}
+As described in chapter X, blah blah
 - Blockchain might get too big
 \subsection{Lack of Interoperability Standards}
 
