--- a/references.bib
+++ b/references.bib
@@ -305,3 +305,13 @@ mendeley-groups = {Ethereum},
 title = {{Performance and Scalability of Blockchain Networks and Smart Contracts}},
 year = {2017}
 }
+
+@misc{ButerinSharding,
+author = {Buterin, Vitalik},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/c72af1228444c3de7396d6bc1c3532c427346b1c.html:html},
+mendeley-groups = {Ethereum},
+title = {{On sharding blockchains}},
+url = {https://github.com/ethereum/wiki/wiki/Sharding-FAQ},
+urldate = {February, 2018}
+}
+
